fix: dark mode fixes (#216)

--- a/src/styles/components/common/loader.scss
+++ b/src/styles/components/common/loader.scss
@@ -10,6 +10,14 @@
         $color: #000091,
         $border-size: 4px,
       );
+
+      .dark & {
+        @include spinthatshit.loader02(
+          $size: 24px,
+          $color: #8585f6,
+          $border-size: 4px,
+        );
+      }
     }
   }
 
@@ -20,6 +28,14 @@
         $color: #000091,
         $border-size: 7px,
       );
+
+      .dark & {
+        @include spinthatshit.loader02(
+          $size: 48px,
+          $color: #8585f6,
+          $border-size: 7px,
+        );
+      }
     }
   }
 
@@ -30,6 +46,14 @@
         $color: #000091,
         $border-size: 10px,
       );
+
+      .dark & {
+        @include spinthatshit.loader02(
+          $size: 96px,
+          $color: #8585f6,
+          $border-size: 10px,
+        );
+      }
     }
   }
 }
