--- a/src/styles/components/common/tag.scss
+++ b/src/styles/components/common/tag.scss
@@ -7,6 +7,8 @@
     text-xs
     rounded-xl
     bg-brown-caramel-925-main
+    dark:bg-brown-caramel-100-main
     inline-block
-    text-brown-caramel-425-main;
+    text-brown-caramel-425-main
+    dark:text-brown-caramel-648-main;
 }
